-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.3.0-rc1
-
Ubuntu 14.04 LTS 64 bit
Windows 7 64 bit
-
4e932d6b07ac53a4a28e59b1c57f7d057bf40f3d
- Start Creator with clean settings.
- Make sure that there's a valid default kit.
- Open qtcreator.qbs from a checkout of Creator's repository at revision "v3.2.0".
Creator will not fully populate a project tree. Instead it will write the following error message to "Issues" view:C:\Users\rob\dev\bin\creator-3.3-5.3.2\share\qtcreator\qbs\share\qbs\modules\qbs\common.qbs:275: error: The following properties are not set. Set them in your profile: qbs.architecture: you might want to re-run 'qbs-setup-toolchains' The following properties have invalid values: qbs.architecture: 'undefined' is invalid. You must use the canonical name 'undefined'
- Go to Projects mode, Build settings for the current kit.
- Check the contents of "Build Steps" -> "Equivalent command line".
For me, it's:qbs build --settings-dir D:\Testprojekte\12342134fsd2\QtProject\qtcreator --jobs 8 debug profile:
Shouldn't there be a profile passed as a parameter?
Creator should be able to parse this project. This worked correctly in Creator 3.2 where "profile" was set to "qtc_Desktop".
Found and tested by Squish test tst_opencreator_qbs.