src/plugins/qbsprojectmanager/qbsprojectmanager.cpp
@@ -116,10 +116,11 @@ ProjectExplorer::Project *QbsManager::openProject(const QString &fileName, QStri
     return new Internal::QbsProject(this, fileName);
 }
 
-QString QbsManager::profileForKit(const ProjectExplorer::Kit *k) const
+QString QbsManager::profileForKit(ProjectExplorer::Kit *k)
 {
     if (!k)
         return QString();
+    updateProfileIfNecessary(k);
     return m_settings->value(qtcProfilePrefix() + k->id().toString()).toString();
 }
 
